--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "stripe": "^16.12.0",
-    "typescript": "^5.6.2",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
