--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@grpc/proto-loader": "^0.7.13",
     "@types/node": "^22.7.0",
     "cors": "^2.8.5",
+    "debug": "^4.3.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "kafkajs": "^2.2.4",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/debug": "^4.1.12",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "ts-node": "^10.9.2",
